Thu Dec 19 09:48:04 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.16 and ChangeLog.

Thu Dec 19 06:45:17 GMT 2013  Olly Betts <olly@survex.com>

	* csharp/docs/index.html,lua/docs/index.html,perl/perl.i,
	  php/docs/index.html,python/docs/index.html,python3/docs/index.rst,
	  python3/python.i,ruby/docs/index.html,tcl8/docs/index.html,
	  xapian-head.i,xapian-headers.i: Update for deprecation of
	  Xapian::Brass::open() and Xapian::Chert::open().

Thu Dec 19 02:26:03 GMT 2013  Olly Betts <olly@survex.com>

	* xapian-headers.i: Update for new Xapian::DB_* constants.

Thu Dec 19 02:17:15 GMT 2013  Olly Betts <olly@survex.com>

	* python3/docs/index.rst: Wording tweaks.

Thu Dec 19 02:15:09 GMT 2013  Olly Betts <olly@survex.com>

	* python/smoketest.py,python3/smoketest.py: If constants weren't
	  handled in xapian-headers.i with the CONSTANT() macro, we ended up
	  with xapian.cvar being created, and an obscure error from
	  smoketest.py.  Now we report what the variables are in the
	  testsuite output.

Wed Dec 18 23:10:53 GMT 2013  Olly Betts <olly@survex.com>

	* xapian-headers.i: Update for addition of xapian/constants.h.

Fri Dec 06 05:29:53 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Link against -ltclstubX.Y for Tcl 8.5 and later
	  (reported by Sergei Golovan in http://bugs.debian.org/724830).
	  Also, use a better check for TCL_INC for Tcl 8.5 and later.

Fri Dec 06 03:31:50 GMT 2013  Olly Betts <olly@survex.com>

	* README,configure.ac: Tweak configure to work with Ruby 2.0.

Tue Dec 03 07:38:49 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Sync link_all_deplibs_CXX check with xapian-core.

Fri Nov 08 10:32:13 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac: Remove duplicate check for thread-local storage
	  qualifier.

Tue Oct 22 05:52:54 GMT 2013  Olly Betts <olly@survex.com>

	* python3/Makefile.am: Make sure docs subdirectory exists in builddir