@@ -126,7 +126,7 @@ member functions of abstract classes like so:
 <li> <code>Xapian::revision()</code> is wrapped as <code>Xapian.Version.Revision()</code>
 </ul>
 <ul>
-<li> <code>Xapian::Auto::open_stub()</code> is wrapped as <code>Xapian.Auto.OpenStub()</code>
+<li> <code>Xapian::Auto::open_stub()</code> is wrapped as <code>Xapian.Auto.OpenStub()</code> (but is now deprecated)
 <li> <code>Xapian::Brass::open()</code> is wrapped as <code>Xapian.Brass.Open()</code> (but is now deprecated)
 <li> <code>Xapian::Chert::open()</code> is wrapped as <code>Xapian.Chert.Open()</code> (but is now deprecated)
 <li> <code>Xapian::InMemory::open()</code> is wrapped as <code>Xapian.InMemory.Open()</code>
