@@ -133,7 +133,7 @@ wrapped like so for Lua:
 <li> <code>Xapian::revision()</code> is wrapped as <code>xapian.revision()</code>
 </ul>
 <ul>
-<li> <code>Xapian::Auto::open_stub()</code> is wrapped as <code>xapian.open_stub()</code>
+<li> <code>Xapian::Auto::open_stub()</code> is wrapped as <code>xapian.open_stub()</code> (but is now deprecated)
 <li> <code>Xapian::Brass::open()</code> is wrapped as <code>xapian.brass_open()</code> (but is now deprecated)
 <li> <code>Xapian::Chert::open()</code> is wrapped as <code>xapian.chert_open()</code> (but is now deprecated)
 <li> <code>Xapian::InMemory::open()</code> is wrapped as <code>xapian.inmemory_open()</code>
