@@ -191,7 +191,7 @@ wrap these PHP iterators (see <a href="http://trac.xapian.org/ticket/520">ticket
 <h2>Database Factory Functions</h2>
 
 <ul>
-<li> <code>Xapian::Auto::open_stub(<i>file</i>)</code> is wrapped as <code>Xapian::auto_open_stub(<i>file</i>)</code>
+<li> <code>Xapian::Auto::open_stub(<i>file</i>)</code> is wrapped as <code>Xapian::auto_open_stub(<i>file</i>)</code> (now deprecated)
 <li> <code>Xapian::Brass::open()</code> is wrapped as <code>Xapian::brass_open()</code> (now deprecated)
 <li> <code>Xapian::Chert::open()</code> is wrapped as <code>Xapian::chert_open()</code> (now deprecated)
 <li> <code>Xapian::InMemory::open()</code> is wrapped as <code>Xapian::inmemory_open()</code>
